--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "huanyu-docs",
-  "version": "1.2.17",
+  "version": "1.2.18",
   "devDependencies": {
     "mermaid": "^11.12.2",
-    "vitepress": "^2.0.0-alpha.13"
+    "vitepress": "^1.6.4"
   },
   "scripts": {
     "dev": "vitepress dev",
